# kmong-metin

./: config.py  main.py  pyproject.toml  screenshot.py  실행.bat
train/: args.yaml  results.csv
trainv2/train/train/: results.csv
trainv3/: results.csv
