[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true 

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]

[project]
name = "kmong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "keyboard>=0.13.5",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.176",
]
